WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205140
REGRESSION (
r172814
): Don't export inline SQLiteDatabase::disableThreadingChecks() method
https://bugs.webkit.org/show_bug.cgi?id=205140
Summary
REGRESSION (r172814): Don't export inline SQLiteDatabase::disableThreadingChe...
David Kilzer (:ddkilzer)
Reported
2019-12-11 15:37:53 PST
This is wrong in Source/WebCore/platform/sql/SQLiteDatabase.h #ifndef NDEBUG WEBCORE_EXPORT void disableThreadingChecks(); #else WEBCORE_EXPORT void disableThreadingChecks() {} #endif The inline method should not have the WEBCORE_EXPORT macro. Regressed in
r172814
for
Bug 136108
. Found when compiling WebKit with Release configuration and compiler optimizations disabled.
Attachments
Patch v1
(1.39 KB, patch)
2019-12-11 15:41 PST
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2019-12-11 15:41:23 PST
Created
attachment 385452
[details]
Patch v1
WebKit Commit Bot
Comment 2
2019-12-12 15:09:56 PST
Comment on
attachment 385452
[details]
Patch v1 Clearing flags on attachment: 385452 Committed
r253445
: <
https://trac.webkit.org/changeset/253445
>
WebKit Commit Bot
Comment 3
2019-12-12 15:09:57 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-12-12 15:10:48 PST
<
rdar://problem/57893755
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug