REGRESSION (r172814): Don't export inline SQLiteDatabase::disableThreadingChecks() method <https://webkit.org/b/205140>

Reviewed by Alex Christensen.

* platform/sql/SQLiteDatabase.h:
(WebCore::SQLiteDatabase::disableThreadingChecks):
Remove WEBCORE_EXPORT macro from inline method. This only seems
to occur on Release builds with compiler optimizations disabled.


Canonical link: https://commits.webkit.org/218371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253445 268f45cc-cd09-0410-ab3c-d52691b4dbfc